--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "knuckleswtf/scribe": "^3.11",
         "laravel/breeze": "^1.4",
         "laravel/sail": "^0.0.5",
         "mockery/mockery": "^1.4.2",
