siderbar info fixed

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "maatwebsite/excel": "^3.1",
         "rap2hpoutre/laravel-log-viewer": "^1.7",
+        "simplesoftwareio/simple-qrcode": "~4",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
